--- a/Icons/style.css
+++ b/Icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'popicon';
-  src:  url('fonts/popicon.eot?gujnj3');
-  src:  url('fonts/popicon.eot?gujnj3#iefix') format('embedded-opentype'),
-    url('fonts/popicon.ttf?gujnj3') format('truetype'),
-    url('fonts/popicon.woff?gujnj3') format('woff'),
-    url('fonts/popicon.svg?gujnj3#popicon') format('svg');
+  src:  url('fonts/popicon.eot?4xqrui');
+  src:  url('fonts/popicon.eot?4xqrui#iefix') format('embedded-opentype'),
+    url('fonts/popicon.ttf?4xqrui') format('truetype'),
+    url('fonts/popicon.woff?4xqrui') format('woff'),
+    url('fonts/popicon.svg?4xqrui#popicon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,114 +25,144 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.font-icon-arrow-bottom-left:before {
-  content: "\e900";
-}
-.font-icon-arrow-bottom:before {
-  content: "\e901";
-}
-.font-icon-arrow-down-right:before {
-  content: "\e902";
-}
-.font-icon-arrow-left:before {
-  content: "\e903";
-}
-.font-icon-arrow-right:before {
-  content: "\e904";
-}
-.font-icon-arrow-top-left:before {
-  content: "\e905";
-}
-.font-icon-arrow-up-right:before {
-  content: "\e906";
-}
-.font-icon-arrow-up:before {
-  content: "\e907";
-}
-.font-icon-chart:before {
-  content: "\e908";
-}
-.font-icon-close:before {
-  content: "\e909";
-}
-.font-icon-cloud:before {
-  content: "\e90a";
-}
-.font-icon-down:before {
-  content: "\e90b";
-}
-.font-icon-fullscreen:before {
-  content: "\e90c";
-}
-.font-icon-global:before {
-  content: "\e90d";
-}
-.font-icon-health:before {
-  content: "\e90e";
-}
-.font-icon-humidity:before {
-  content: "\e90f";
-}
-.font-icon-info-fill:before {
-  content: "\e910";
-}
-.font-icon-info:before {
-  content: "\e911";
-}
-.font-icon-left:before {
-  content: "\e912";
-}
-.font-icon-location:before {
-  content: "\e913";
-}
-.font-icon-Menu:before {
-  content: "\e914";
-}
-.font-icon-more:before {
-  content: "\e915";
-}
-.font-icon-pin:before {
-  content: "\e916";
-}
-.font-icon-play:before {
-  content: "\e917";
-}
-.font-icon-rain:before {
+.font-icon-lock:before {
   content: "\e918";
 }
-.font-icon-right:before {
+.font-icon-alert:before {
+  content: "\e900";
+}
+.font-icon-analyzic:before {
+  content: "\e901";
+}
+.font-icon-arrow-bottom-left:before {
+  content: "\e902";
+}
+.font-icon-arrow-bottom:before {
+  content: "\e903";
+}
+.font-icon-arrow-down-right:before {
+  content: "\e904";
+}
+.font-icon-arrow-left:before {
+  content: "\e905";
+}
+.font-icon-arrow-right:before {
+  content: "\e906";
+}
+.font-icon-arrow-top-left:before {
+  content: "\e907";
+}
+.font-icon-arrow-up-right:before {
+  content: "\e908";
+}
+.font-icon-arrow-up:before {
+  content: "\e909";
+}
+.font-icon-bell:before {
+  content: "\e90a";
+}
+.font-icon-chart:before {
+  content: "\e90b";
+}
+.font-icon-close:before {
+  content: "\e90c";
+}
+.font-icon-cloud:before {
+  content: "\e90d";
+}
+.font-icon-done:before {
+  content: "\e90e";
+}
+.font-icon-down:before {
+  content: "\e90f";
+}
+.font-icon-fullscreen:before {
+  content: "\e910";
+}
+.font-icon-global:before {
+  content: "\e911";
+}
+.font-icon-health:before {
+  content: "\e912";
+}
+.font-icon-humidity:before {
+  content: "\e913";
+}
+.font-icon-info-fill:before {
+  content: "\e914";
+}
+.font-icon-info:before {
+  content: "\e915";
+}
+.font-icon-left:before {
+  content: "\e916";
+}
+.font-icon-location:before {
+  content: "\e917";
+}
+.font-icon-mail:before {
   content: "\e919";
 }
-.font-icon-satellite:before {
+.font-icon-Menu:before {
   content: "\e91a";
 }
-.font-icon-Search:before {
+.font-icon-more:before {
   content: "\e91b";
 }
-.font-icon-snow:before {
+.font-icon-news:before {
   content: "\e91c";
 }
-.font-icon-station:before {
+.font-icon-pause:before {
   content: "\e91d";
 }
-.font-icon-sun:before {
+.font-icon-pin:before {
   content: "\e91e";
 }
-.font-icon-thunder:before {
+.font-icon-play:before {
   content: "\e91f";
 }
-.font-icon-time:before {
+.font-icon-rain:before {
   content: "\e920";
 }
-.font-icon-track:before {
+.font-icon-right:before {
   content: "\e921";
 }
-.font-icon-up:before {
+.font-icon-satellite:before {
   content: "\e922";
 }
-.font-icon-zoom-in:before {
+.font-icon-Search:before {
   content: "\e923";
 }
-.font-icon-zoom-out:before {
+.font-icon-setting:before {
   content: "\e924";
+}
+.font-icon-snow:before {
+  content: "\e925";
+}
+.font-icon-station:before {
+  content: "\e926";
+}
+.font-icon-sun:before {
+  content: "\e927";
+}
+.font-icon-thunder:before {
+  content: "\e928";
+}
+.font-icon-time:before {
+  content: "\e929";
+}
+.font-icon-track:before {
+  content: "\e92a";
+}
+.font-icon-up:before {
+  content: "\e92b";
+}
+.font-icon-user:before {
+  content: "\e92c";
+}
+.font-icon-zoom-in:before {
+  content: "\e92d";
+}
+.font-icon-zoom-out:before {
+  content: "\e92e";
 }
