--- a/Style/main.less
+++ b/Style/main.less
@@ -1292,6 +1292,11 @@ select {
                 .tick {
                     opacity: 0.6;
                 }
+                svg {
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                }
                 .step {
                     height: 100%;
                     flex: 1;
