--- a/Style/main.less
+++ b/Style/main.less
@@ -1256,9 +1256,9 @@ select {
                 background-color: var(--gray-300);
             }
             .slider-run {
-                background: linear-gradient(to right,var(--primary-text), var(--primary-color));
-                // background-color: var(--primary-text);
-                width: 100px;
+                // background: linear-gradient(to right,var(--primary-text), var(--primary-color));
+                background-color: var(--primary-color);
+                // width: 100px;
                 // transition: var(--transition);
                 position: relative;
                 pointer-events: none;
