--- a/Style/main.css
+++ b/Style/main.css
@@ -61,6 +61,7 @@
   --padding-F: 16px;
   --padding-G: 18px;
   --padding-H: 20px;
+  --padding-K: 32px;
   --padding-CF: 8px 16px 8px 8px;
   --margin-I: 32px;
   --margin-K: 24px;
@@ -467,6 +468,16 @@ body {
   border: 1px solid rgba(var(--color-50), 0.3);
 }
 .air-50 > *:last-child .icon {
+  background-color: rgba(var(--color-50), 0.6);
+  color: var(--white);
+}
+.air-50 span {
+  color: var(--air-50);
+  background-color: rgba(var(--color-50), 0.2);
+  border: 1px solid rgba(var(--color-50), 0.3);
+  backdrop-filter: blur(10px);
+}
+.air-50 span .icon {
   background-color: rgba(var(--color-50), 0.6);
   color: var(--white);
 }
@@ -1395,15 +1406,23 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
   color: #1A1D1F !important;
 }
 .menubar {
+  position: sticky;
+  top: 0;
+  z-index: 10;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: var(--padding-F) var(--padding-H);
+  padding: var(--padding-E) var(--padding-H);
   color: var(--white);
   background-color: var(--primary-text);
 }
 .menubar > div {
   display: flex;
+  align-items: center;
+  font-size: var(--font-size-A);
+}
+.menubar > div > svg {
+  margin: 0 var(--margin-H);
 }
 .dropdown {
   cursor: pointer;
@@ -1492,30 +1511,45 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
   background-color: var(--gray-10);
 }
 .layout-dashboard {
-  display: flex;
-  flex-direction: column;
-  padding: var(--padding-H);
-}
-.layout-dashboard > :first-child {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto repeat(2, 1fr);
   grid-column-gap: var(--margin-H);
   grid-row-gap: var(--margin-H);
-  margin-bottom: var(--margin-H);
+  padding: var(--padding-H);
 }
-.layout-dashboard > :last-child {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: repeat(2, 200px);
-  gap: var(--margin-H);
+.layout-dashboard > :nth-child(1) {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.layout-dashboard > :nth-child(2) {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.layout-dashboard > :nth-child(3) {
+  grid-area: 1 / 3 / 2 / 4;
+}
+.layout-dashboard > :nth-child(4) {
+  grid-area: 1 / 4 / 2 / 5;
+}
+.layout-dashboard > :nth-child(5) {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.layout-dashboard > :nth-child(6) {
+  grid-area: 2 / 2 / 3 / 5;
+}
+.layout-dashboard > :nth-child(7) {
+  grid-area: 3 / 1 / 4 / 2;
+}
+.layout-dashboard > :nth-child(8) {
+  grid-area: 3 / 2 / 4 / 5;
 }
 .card-6 {
   background-color: var(--white);
   border-radius: var(--border-radius-D);
-  padding: var(--padding-H);
+  padding: var(--padding-K);
   display: flex;
   flex-direction: column;
   font-size: var(--font-size-A);
+  border-bottom: 2px solid transparent;
 }
 .card-6 > :first-child {
   margin-bottom: var(--margin-I);
@@ -1537,15 +1571,15 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
   align-items: center;
 }
 .card-6 > div > div span {
-  margin-right: var(--margin-E);
+  margin-right: var(--margin-D);
 }
 .card-6 .district-info {
   display: flex;
   align-items: center;
 }
 .card-6 .district-info .district-number {
-  font-size: 24px;
-  font-weight: 400;
+  font-size: 20px;
+  font-weight: bold;
   letter-spacing: 1px;
   margin-right: var(--margin-C);
 }
@@ -1569,11 +1603,84 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
   font-weight: bold;
 }
 .card-6 .percent-info .compare-for {
-  color: var(--gray-300);
+  color: var(--gray);
   font-weight: 400;
+}
+.card-6:hover {
+  z-index: 1;
+  transition: var(--transition);
+  border-bottom: 2px solid var(--primary-color);
+  border-radius: var(--border-radius-D) var(--border-radius-D) 0 0;
+  box-shadow: 0 10px 30px #00000015;
 }
 .card-7 {
   background-color: var(--white);
   border-radius: var(--border-radius-D);
-  padding: var(--padding-H);
+  padding: var(--padding-K);
+  border-bottom: 2px solid transparent;
+  overflow: hidden;
+}
+.card-7 > :first-child {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: var(--font-size-A);
+  font-weight: 500;
+}
+.card-7 > :first-child .icon {
+  background-color: var(--gray-10);
+}
+.card-7 > :first-child > div {
+  display: flex;
+  align-items: center;
+}
+.card-7 > :first-child > div div {
+  margin-left: var(--margin-E);
+}
+.card-7 > :first-child > div div span {
+  color: var(--primary-color);
+}
+.card-7:hover {
+  z-index: 1;
+  transition: var(--transition);
+  border-bottom: 2px solid var(--primary-color);
+  border-radius: var(--border-radius-D) var(--border-radius-D) 0 0;
+  box-shadow: 0 10px 30px #00000015;
+}
+.map-bg {
+  position: relative;
+}
+.map-bg #map {
+  right: 0;
+}
+.map-bg > :first-child {
+  position: absolute;
+  z-index: 2;
+  top: var(--padding-K);
+  right: var(--padding-K);
+  width: calc(100% - 2*var(--padding-K));
+}
+.map-bg > :first-child .icon {
+  background-color: var(--white);
+}
+.location-selected {
+  position: absolute;
+  z-index: 2;
+  width: calc(100% - 2*var(--padding-K));
+  bottom: var(--padding-K);
+  right: var(--padding-K);
+}
+.location-selected > span {
+  font-size: var(--font-size-input);
+  border-radius: var(--border-radius-D);
+  padding: var(--padding-F);
+}
+.chart-height {
+  height: 300px;
+}
+.container-scroll {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden overlay;
+  height: 100%;
 }
