--- a/Style/main.less
+++ b/Style/main.less
@@ -70,6 +70,7 @@
     --padding-F: 16px;
     --padding-G: 18px;
     --padding-H: 20px;
+    --padding-K: 32px;
     --padding-CF: 8px 16px 8px 8px;
     //margin 
     --margin-I: 32px;
@@ -584,6 +585,16 @@ body {
         color: var(--air-50);
         background-color: rgba(var(--color-50), 0.2);
         border: 1px solid rgba(var(--color-50), 0.3);
+        .icon {
+            background-color: rgba(var(--color-50), 0.6);
+            color: var(--white);
+        }
+    }
+    span {
+        color: var(--air-50);
+        background-color: rgba(var(--color-50), 0.2);
+        border: 1px solid rgba(var(--color-50), 0.3);
+        backdrop-filter: blur(10px);
         .icon {
             background-color: rgba(var(--color-50), 0.6);
             color: var(--white);
@@ -1677,14 +1688,22 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
 
 //menubar
 .menubar {
+    position: sticky;
+    top: 0;
+    z-index: 10;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: var(--padding-F) var(--padding-H);
+    padding: var(--padding-E) var(--padding-H);
     color: var(--white);
     background-color: var(--primary-text);
     &>div {
         display: flex;
+        align-items: center;
+        font-size: var(--font-size-A);
+        &>svg {
+            margin: 0 var(--margin-H);
+        }
     }
 }
 .dropdown {
@@ -1776,34 +1795,69 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
     background-color: var(--gray-10);
 }
 .layout-dashboard {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto repeat(2, 1fr);
+    grid-column-gap: var(--margin-H);
+    grid-row-gap: var(--margin-H);
     padding: var(--padding-H);
-    &>:first-child{
-        display: grid;
-        grid-template-columns: repeat(4,1fr);
-        grid-column-gap: var(--margin-H);
-        grid-row-gap: var(--margin-H);
-        // filter: drop-shadow(var(--box-shadow));
-        margin-bottom: var(--margin-H);
+    &>:nth-child(1) { 
+        grid-area: 1 / 1 / 2 / 2; 
     }
-    &>:last-child {
-        display: grid;
-        grid-template-columns: 1fr 3fr;
-        grid-template-rows: repeat(2, 200px);
-        gap: var(--margin-H);
-
-        // filter: drop-shadow(var(--box-shadow));
-
+    &>:nth-child(2)  { 
+        grid-area: 1 / 2 / 2 / 3; 
     }
+    &>:nth-child(3)  { 
+        grid-area: 1 / 3 / 2 / 4; 
+    }
+    &>:nth-child(4)  { 
+        grid-area: 1 / 4 / 2 / 5; 
+    }
+    &>:nth-child(5)  { 
+        grid-area: 2 / 1 / 3 / 2; 
+    }
+    &>:nth-child(6)  { 
+        grid-area: 2 / 2 / 3 / 5; 
+    }
+    &>:nth-child(7)  { 
+        grid-area: 3 / 1 / 4 / 2; 
+    }
+    &>:nth-child(8)  { 
+        grid-area: 3 / 2 / 4 / 5; 
+    }
+    // &>:nth-child(1) { 
+    //     grid-area: 1 / 1 / 2 / 3;
+    // }
+    // &>:nth-child(2)  { 
+    //     grid-area: 1 / 3 / 2 / 5;
+    // }
+    // &>:nth-child(3)  { 
+    //     grid-area: 1 / 5 / 2 / 7; 
+    // }
+    // &>:nth-child(4)  { 
+    //     grid-area: 1 / 7 / 2 / 9;
+    // }
+    // &>:nth-child(5)  { 
+    //     grid-area: 2 / 1 / 3 / 4;
+    // }
+    // &>:nth-child(6)  { 
+    //     grid-area: 2 / 4 / 3 / 9;
+    // }
+    // &>:nth-child(7)  { 
+    //     grid-area: 3 / 1 / 4 / 4; 
+    // }
+    // &>:nth-child(8)  { 
+    //     grid-area: 3 / 4 / 4 / 9;
+    // }
 }
 .card-6 {
     background-color: var(--white);
     border-radius: var(--border-radius-D);
-    padding: var(--padding-H);
+    padding: var(--padding-K);
     display: flex;
     flex-direction: column;
     font-size: var(--font-size-A);
+    border-bottom: 2px solid transparent;
     &>:first-child {
         margin-bottom: var(--margin-I);
         text-transform: uppercase;
@@ -1823,7 +1877,7 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
             display: flex;
             align-items: center;
             span {
-                margin-right: var(--margin-E);
+                margin-right: var(--margin-D);
             }
         }
     }
@@ -1831,8 +1885,8 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
         display: flex;
         align-items: center;
         .district-number {
-            font-size: 24px;
-            font-weight: 400;
+            font-size: 20px;
+            font-weight: bold;
             letter-spacing: 1px;
             margin-right: var(--margin-C);
         }
@@ -1856,14 +1910,87 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
             font-weight: bold;
         }
         .compare-for {
-            color: var(--gray-300);
+            color: var(--gray);
             font-weight: 400;
         }
+    }
+    &:hover {
+        z-index: 1;
+        transition: var(--transition);
+        border-bottom: 2px solid var(--primary-color);
+        border-radius: var(--border-radius-D) var(--border-radius-D) 0 0;
+        box-shadow: 0 10px 30px #00000015;
     }
 }
 .card-7 {
     background-color: var(--white);
     border-radius: var(--border-radius-D);
-    padding: var(--padding-H);
+    padding: var(--padding-K);
+    border-bottom: 2px solid transparent;
+    overflow: hidden;
+    &>:first-child {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: var(--font-size-A);
+        font-weight: 500;
+        .icon {
+            background-color: var(--gray-10);
+        }
+        &>div {
+            display: flex;
+            align-items: center;
+            div {
+                margin-left: var(--margin-E);
+                span {
+                    color: var(--primary-color);
+                }
+            }
+        }
+    }
+    &:hover {
+        z-index: 1;
+        transition: var(--transition);
+        border-bottom: 2px solid var(--primary-color);
+        border-radius: var(--border-radius-D) var(--border-radius-D) 0 0;
+        box-shadow: 0 10px 30px #00000015;
+    }
+}
+.map-bg {
+    position: relative;
+    #map {
+        right: 0;
+    }
+    &>:first-child {
+        position: absolute;
+        z-index: 2;
+        top: var(--padding-K);
+        right: var(--padding-K);
+        width: calc(100% - 2*var(--padding-K));
+        .icon {
+            background-color: var(--white);
+        }
+    }
+}
+.location-selected {
+    position: absolute;
+    z-index: 2;
+    width: calc(100% - 2*var(--padding-K));
+    bottom: var(--padding-K);
+    right: var(--padding-K);
+    &>span {
+        font-size: var(--font-size-input);
+        border-radius: var(--border-radius-D);
+        padding: var(--padding-F);
+    }
+}
+.chart-height {
+    height: 300px;
+}
 
+.container-scroll {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden overlay;
+    height: 100%;
 }
